* Dev - Removed superfluous spaces in code and text.
* Add - Added support for the class and submit_class shortcode parameters to the [groups_join] shortcode.
* Add - Added support for the class and submit_class shortcode parameters to the [groups_leave] shortcode.
* Fix - Fixed inappropriate class used for the container of the [groups_leave] shortcode.

2025-04-20 - version 3.5.0
* Update - WordPress 6.8 compatible.
* Update - Requires at least WordPress 6.3.
* Update - Updated recommendations.
* Update - Updated description.
* Dev - Codesmetics.

2025-01-22 - version 3.4.2
* Dev - Removed unnecessary translation function calls.
* Dev - Revised some instances of missing output escaping.
* Dev - Added missing translators: comments.
* Dev - Replaced deprecated null parameter.
* Dev - Validation hints.
* Dev - Removed return type declaration for two actions.
* Fix - Fixed missing return value for a widget_categories_args filter.
* Fix - Fixed missing return value for a widget_categories_dropdown_args filter.
* Fix - Fixed optional return value declaration.
* Update - Updated the translation template.
* Update - Updated the included translations.

2024-12-29 - version 3.4.1
* Update - Declare WooCommerce HPOS compatibility.

2024-12-26 - version 3.4.0
* Update - WordPress 6.7 compatible.
* Dev - Security validation WordPress.DB.PreparedSQL.InterpolatedNotPrepared
* Dev - Security validation WordPress.Security.EscapeOutput.OutputNotEscaped
* Dev - Security validation WordPress.DB.PreparedSQL.NotPrepared
* Dev - Security validation audit.php.wp.security.sqli.input-in-sinks
* Dev - Security validation scanner.php.wp.security.rest-route.permission-callback.incorrect-return
* Dev - Security validation audit.php.wp.security.sqli.shortcode-attr
* Dev - Security validation audit.php.wp.security.xss.shortcode-attr
* Dev - Security validation scanner.php.wp.security.csrf.nonce-check-not-dying
* Dev - Security validation WordPress.Security.SafeRedirect.wp_redirect_wp_redirect